--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -5,10 +5,10 @@
     android:viewportHeight="108"
     android:viewportWidth="108">
     <path
-        android:fillColor="#26A69A"
+        android:fillColor="@color/darkRed"
         android:pathData="M0,0h108v108h-108z" />
     <path
-        android:fillColor="#00000000"
+        android:fillColor="@color/darkRed"
         android:pathData="M9,0L9,108"
         android:strokeColor="#33FFFFFF"
         android:strokeWidth="0.8" />
