--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="darkRed">#af0b1c</color>
-    <color name="lightRed">#D40139</color>
+    <color name="lightRed">#d40139</color>
     <color name="primaryBlue">#336699</color>
     <color name="green">#339900</color>
-    <color name="lightGrey">#F5F5F5</color>
+    <color name="lightGrey">#f5f5f5</color>
+    <color name="grey">#d9d9d9</color>
     <color name="darkGrey">#333333</color>
 </resources>
